# voting_system

./: app.py  compare_faces.py
ElectionPilot/: app.py  replit.md  requirements.txt
ElectionPilot/attached_assets/: Pasted-I-have-attached-my-web-application-project-in-the-GitHub-link-https-github-com-Mmithraa2523-vo-1759404042959_1759404042960.txt  Pasted-PS-D-FaceVoteSecure-SecureVoteAI-python-app-py-C-Users-mithr-AppData-Roaming-Python-Python311-si-1759395427659_1759395427659.txt
ElectionPilot/services/: face_service.py
FaceGuardNotify/: app.py
FaceGuardNotify/services/: email_service.py  face_service.py
FaceGuardNotify/templates/: base.html  index.html  login.html
FaceVoteSecure/: replit.md
FaceVoteSecure/SecureVoteAI/: app.py  models.py  pyproject.toml  replit.md  requirements.txt
FaceVoteSecure/SecureVoteAI/blueprints/admin/: routes.py
FaceVoteSecure/SecureVoteAI/blueprints/poll/: routes.py
FaceVoteSecure/SecureVoteAI/services/: email_service.py
FaceVoteSecure/SecureVoteAI/templates/admin/: candidates.html  parties.html
FaceVoteSecure/SecureVoteAI/templates/results/: live.html
SecureVote/: SETUP_INSTRUCTIONS.md  app.py  replit.md
SecureVoteAI/: DOWNLOAD_INSTRUCTIONS.md  app.py
SecureVoteChain/: IMPORTANT_SETUP_NOTES.md  app.py  replit.md
VoteChain/: app.py  generate_admin_hash.py  init_db.py  models.py  replit.md  requirements.txt  utils.py
VoteSecureAI/: LOCAL_SETUP_GUIDE.md  models.py  replit.md  requirements.txt  run_local.py  utils.py
services/: email_service.py  face_service.py
templates/: index.html
(+63 files in other folders)
